2005-09-23  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* configure.in: FreeBSD has tcltk named libtcl84 and libtk84

	* timidity/timidity.c (list_dyna_interface): change dynamic
	  interface lister to some try-and-error mechanizm.
	* interface/*.txt : deleted. (not used any longer)

2005-09-22  Mikhail Teterin <mi@aldan.algebra.com>

	* timidity/playmidi.c (process_sysex_event): fix typo

2005-09-22  Kentaro Sato <kentaro@ranvis.com>

	* timidity/smplfile.c: Fixed possible crash when Sampler chunk's
	  dwSamplePeriod is erroneously 0.

2005-05-08  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* timidity/timidity.c (dynamic_interface_module): rewrite.
	* timidity/dl_dyld.c (dl_find_symbol): fix potential buffer overflow
	* timidity/dl_dyld.c (dl_free): implement of dl_free()

2005-04-03  Kentaro Sato <kentaro@ranvis.com>

	* timidity/sndfont.c: Fixed to compile cfgforsf.

2004-12-22  Ed Catmur  <ed@catmur.co.uk>

	* interface/gtk_i.c (Launch_Gtk_Process): Fix assertion error in
	  GTK-2.6.0

2004-12-08  Kentaro Sato <kentaro@ranvis.com>

	* libarc/arc.c:
	  Fixed to skip the platform specific path separators right after #.

2004-12-04  Henrique de Moraes Holschuh <hmh@debian.org>

	* timidity/aRts_a.c (open_output): Fix for gcc >= 3.4.x [timidity-bugs-en:00025]

2004-12-02  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* interface/ncurs_c.c: [timidity-bugs-ja:00118]
	* timidity/timidity.c (list_dyna_interface): bug fix: cmp can be
	  uninitialized

2004-11-03  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* timidity/resample.c (rs_vib_bidir): disable PRECALC_LOOPS for
	  this function

2004-11-03  Henrique de Moraes Holschuh <hmh@debian.org>

	* timidity/aRts_a.c: disable aRts auto-detection to avoid
	  segmentation violation

2004-11-03  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* timidity/timidity.c (list_dyna_interface): ditto
	* interface/dynamic_c.c (ctl_open): fix compile error

2004-11-03  Eric A. Welsh <ewelsh@ccb.wustl.edu>
